Added policies method to create policies in keto for different entities.
