# action/policy/route.go
@@ -1,35 +1,33 @@
-package category
+package policy
 
 import (
-	"github.com/factly/bindu-server/config"
+	"github.com/factly/bindu-server/model"
 	"github.com/factly/bindu-server/util"
 	"github.com/go-chi/chi"
 )
 
-// category request model
-type category struct {
-	Name        string `json:"name" validate:"required,min=3,max=50"`
-	Slug        string `json:"slug"`
-	Description string `json:"description"`
+type policyReq struct {
+	Name        string             `json:"name"`
+	Description string             `json:"description"`
+	Permissions []model.Permission `json:"permissions"`
+	Users       []string           `json:"users"`
 }
 
-var userContext config.ContextKey = "category_user"
-
-// Router - Group of category router
+// Router - Group of medium router
 func Router() chi.Router {
 	r := chi.NewRouter()
 
-	entity := "categories"
+	entity := "policies"
 
 	r.With(util.CheckKetoPolicy(entity, "get")).Get("/", list)
 	r.With(util.CheckKetoPolicy(entity, "create")).Post("/", create)
+	r.With(util.CheckKetoPolicy(entity, "create")).Post("/default", createDefaults)
 
-	r.Route("/{category_id}", func(r chi.Router) {
+	r.Route("/{policy_id}", func(r chi.Router) {
 		r.With(util.CheckKetoPolicy(entity, "get")).Get("/", details)
 		r.With(util.CheckKetoPolicy(entity, "update")).Put("/", update)
 		r.With(util.CheckKetoPolicy(entity, "delete")).Delete("/", delete)
 	})
 
 	return r
-
 }
